<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            android:paddingVertical="20dp"
            tools:context=".ui.main.register.RegisterFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
            <!--    <Spinner-->
            <!--        android:id="@+id/spLevel"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content" />-->
            <com.dev.materialspinner.MaterialSpinner
                android:id="@+id/spLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/ic_name"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    <EditText-->
            <!--        android:id="@+id/etName"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    <EditText-->
            <!--        android:id="@+id/etPhone"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:startIconDrawable="@drawable/ic_adddress"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    <EditText-->
            <!--        android:id="@+id/etAddress"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilJob"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job"
                app:startIconDrawable="@drawable/ic_job"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    <EditText-->
            <!--        android:id="@+id/etJob"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content" />-->

            <LinearLayout
                android:id="@+id/llLatLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etLatLng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:textSize="10sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGetLocation"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/location" />
            </LinearLayout>

            <Button

                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spinKitLoading"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/colorPrimaryDark" />
    </RelativeLayout>


</ScrollView>