<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingVertical="20dp"
        tools:context=".ui.home.outliteAddUpdate.AddUpdateOutliteActivity">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/outlite_nae"
            app:startIconDrawable="@drawable/ic_outlite"

            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--    <EditText-->
        <!--        android:id="@+id/etName"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etLatLng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:enabled="false"
                android:maxLines="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGetLocation"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/location" />
        </LinearLayout>

        <EditText

            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <!--    <Button-->
        <!--        android:id="@+id/btnAddUpdate"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="8dp"-->
        <!--        android:text="@string/add"-->
        <!--        android:textColor="@android:color/white" />-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddUpdate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/insert"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_add"
            app:iconTint="@android:color/white" />

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKitLoading"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorPrimaryDark" />
</RelativeLayout>